Partial fix for T58113 bevel harden normals bug.

This fixes the problem where not all faces got hardened properly
when using a hardening mode in the bevel modifier.